# telemetry-anomaly-detection

./: .env.detect.example  .env.example  .gitignore  CLAUDE.md  DETECTION_PRINCIPLES.md  Dockerfile  LICENSE  PROJECT_TRACKER.md  README.md  RESOURCES_NEEDED.md  docker-compose.detect.prod.override.yml  docker-compose.detect.prod.yml  docker-compose.yml  pyproject.toml
SKAB-S16/: Accelerometer1RMS.lstm.pt  Accelerometer1RMS.tcn.pt  Accelerometer2RMS.lstm.pt  Accelerometer2RMS.tcn.pt  Current.lstm.pt  Current.tcn.pt  Pressure.lstm.pt  Pressure.tcn.pt  Temperature.lstm.pt  Temperature.tcn.pt  Thermocouple.lstm.pt  Thermocouple.tcn.pt  Voltage.lstm.pt  Voltage.tcn.pt  Volume Flow RateRMS.lstm.pt  Volume Flow RateRMS.tcn.pt
aws/: iam-policy.json
configs/: benchmark_weights.yaml  dsremo.yaml  sentinel.yaml
dashboard/: app.js  index.html  style.css
dashboard/samples/: satellite_thermal.csv  spacecraft_eps.csv  valve_sensor.csv
docs/: ARL_BUDGET.md  BENCHMARK_DEBATE_2026_03_31.md  BENCHMARK_RESULTS.md  FMEA_MAPPING.md  MULTI_EXPERT_CRITIQUE.md  PITCH_EMAIL.md  PRICING.md  PRODUCT_OVERVIEW.md  SLA.md  TARGET_COMPANIES.md  TECHNICAL_REVIEW.md
landing/: ads.txt  index.html  style.css
nginx/: detect.conf
results/: esa_adb_results.json
scripts/: analyze_csv.py  analyze_esa_full.py  analyze_influxdb.py  analyze_satnogs_full.py  analyze_yamcs.py  benchmark_esa_adb.py  benchmark_llr_weights.py  deploy.sh  import_xtce.py  run_benchmark_auto.py  run_full_benchmark.py  score_benchmark.py  seed_demo.py  setup-ec2.sh  test_esa_live.py  test_satnogs_live.py
src/dsremo/: __init__.py  cli.py
src/dsremo/alerts/: service.py
src/dsremo/api/: app.py  dependencies.py  middleware.py  routes.py  routes_alerts.py  routes_aria.py  routes_auth.py  routes_channels.py  routes_connectors.py  routes_health.py  routes_incidents.py  routes_keys.py  routes_oauth.py  routes_parameters.py  routes_suppress.py  routes_tenants.py  routes_users.py  schemas.py  websocket.py
src/dsremo/core/: config.py  models.py  plan_limits.py  security.py  tenant.py
src/dsremo/db/: connection.py  demo_seed.py  memory_store.py  migrations.py  queries.py  retention.py
src/dsremo/detection/: anomaly_similarity.py  arl.py  autoencoder_detector.py  base_ml_detector.py  (+23 more)
src/sentinel/: __init__.py  cli.py
tests/: conftest.py  test_adapter.py  test_api.py  test_auth.py  test_bocpd.py  test_changepoint.py  test_esa_loader.py  test_eviction.py  test_explainer.py  test_features.py  test_gmm_autoz.py  test_isolation.py  test_satnogs_fetcher.py  test_security.py  test_simulator.py  test_sprint10.py  test_sprint11.py  test_sprint12.py  test_sprint13.py  test_sprint14.py  test_sprint15.py  test_sprint16.py  test_sprint17.py  test_sprint18.py  test_sprint19.py  test_sprint25.py  test_sprint3.py  test_sprint35.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_sprint9.py  test_statistical.py  test_tenant.py
(+73 files in other folders)
