[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "AI Telemetry Anomaly Detection Engine for satellite operations"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sentinel Team" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "ruptures>=1.1",
    "statsmodels>=0.14",
    "dynaconf>=3.2",
    "typer>=0.9",
    "structlog>=24.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "websockets>=12.0",
    "python-multipart>=0.0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "hypothesis>=6.98",
    "ruff>=0.3",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
# S = bandit security checks enabled by default
