[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsremo"
version = "0.1.0"
description = "AI Telemetry Anomaly Detection Engine for satellite operations"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Dsremo Team" }]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.12,<2.0",
    "scikit-learn>=1.4,<2.0",
    "ruptures>=1.1,<2.0",
    "statsmodels>=0.14,<1.0",
    "dynaconf>=3.2,<4.0",
    "typer>=0.9,<1.0",
    "structlog>=24.0,<25.0",
    "httpx>=0.27,<1.0",
    "cryptography>=42.0,<44.0",
    "websockets>=12.0,<14.0",
    "python-multipart>=0.0.7,<1.0",
    "pyyaml>=6.0,<7.0",
    "PyJWT>=2.8,<3.0",
    "bcrypt>=4.0,<5.0",
    "email-validator>=2.0,<3.0",
    "tqdm>=4.0,<5.0",
]

[project.optional-dependencies]
ml = ["torch>=2.0,<3.0"]
full = ["dsremo[ml]", "stumpy>=1.4,<2.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.27,<1.0",
    "hypothesis>=6.98,<7.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
dsremo = "dsremo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dsremo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
# S = bandit security checks enabled by default
